# Urban-Heat-Island

./: .gitignore  README.md  heat_map.html  heat_map_2020-01-01.html  heat_map_2020.html  hello.py  main.py  pyproject.toml
data_collection/: create_map.py  ml_model.py
src/: app.py  constants.py  create_map.py
src/data_collection/: create_map.py  ml_model.py
