[project]
name = "urban-heat-island"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.18.0",
    "geemap>=0.35.0",
    "ipykernel>=6.29.5",
    "ipyleaflet>=0.19.2",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "python-decouple>=3.8",
    "setuptools>=75.2.0",
]
